[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jlv5-harness"
version = "0.1.0"
description = "PC-side Python driver for the Jumperless V5 programmable breadboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6"]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "mypy>=1.10",
    "pyyaml>=6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jlv5_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "hardware: requires a physically connected Jumperless V5 (deselect with -m 'not hardware')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
